Adopt changes proposed by pull requests: .razor instead of .cshtml, remove some js which led to false labels, use Interaction mode which is interpreted as string as opposed to an int if you used the enum

--- a/WebCore/WebCore.csproj
+++ b/WebCore/WebCore.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChartJs.Blazor\ChartJs.Blazor.csproj" />
+    <None Remove="Linker.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <BlazorLinkerDescriptor Include="Linker.xml" />
+    <ProjectReference Include="..\ChartJs.Blazor\ChartJs.Blazor.csproj" />
   </ItemGroup>
 
 </Project>
