--- a/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -9,6 +9,7 @@
     <IsPackable>true</IsPackable>
     <OutputType>Library</OutputType>
     <LangVersion>7.3</LangVersion>
+    <RazorLangVersion>3.0</RazorLangVersion>
     <VersionPrefix>0.3</VersionPrefix>
     <!--<VersionSuffix>alpha-$(PoorMansBuildNumber)</VersionSuffix>-->
     <Title>ChartJs.Blazor</Title>
@@ -41,7 +42,6 @@ Fixed disappearing charts when navigating away and back - Thanks to the communit
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview6.19307.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Build" Version="3.0.0-preview3-19153-02" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0-preview6.19303.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
@@ -60,19 +60,19 @@ Fixed disappearing charts when navigating away and back - Thanks to the communit
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Charts\ChartJsDoughnutChart.cshtml">
+    <Content Update="Charts\ChartJsDoughnutChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Charts\ChartJsScatterChart.cshtml">
+    <Content Update="Charts\ChartJsScatterChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Charts\ChartJsPolarAreaChart.cshtml">
+    <Content Update="Charts\ChartJsPolarAreaChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Charts\ChartJsPieChart.cshtml">
+    <Content Update="Charts\ChartJsPieChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Charts\ChartJsMixedChart.cshtml">
+    <Content Update="Charts\ChartJsMixedChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
