--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/ChartJs.Blazor.Sample.Serverside.csproj
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/ChartJs.Blazor.Sample.Serverside.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview4-19216-03" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview6.19307.2" />
     <PackageReference Include="Sotsera.Blazor.Toaster" Version="0.9.0-preview-1" />
   </ItemGroup>
 
