Implement and Fix responsiveness, remove unnecessary properties + more refactoring

--- a/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -64,6 +64,10 @@ Fixed disappearing charts when navigating away and back - Thanks to the communit
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="dist\ChartJSBlazor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Charts\ChartJsDoughnutChart.razor">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
