--- a/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -46,9 +46,9 @@ Chart legend with custom handler for Item generation and events - Javascript and
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-preview8.19405.7" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.6.0-preview8.19405.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-preview9.19424.4" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0-preview9.19421.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
   </ItemGroup>
 
   <ItemGroup>
