Rework bar chart. (#86)
* Reworked bar chart.

* Fixed all current issues in the bar chart rework.

* Removed bar data class in example project.

* Adjusted example to use double wrapper.

* Adjusted example a bit more: Added axis.

* Use ChartType (singular), update xml-docs

* Move common files, adjust namespaces

* Update everything bar axes related

* Use List, complete bar dataset

* Typo, remove automatic stack-id, add examples

--- a/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -50,4 +50,18 @@ Chart legend with custom handler for Item generation and events - Javascript and
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ChartJS\BarChart\Axes\ExtendedCartesianAxes.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+    </None>
+  </ItemGroup>
+    
+  <ItemGroup>
+    <Compile Remove="ChartJS\BarChart\Axes\ExtendedCartesianAxes.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
 </Project>
