--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
     <ProjectReference Include="..\..\Shared\ChartJs.Blazor.Sample.Shared\ChartJs.Blazor.Sample.Shared.csproj" />
   </ItemGroup>
