--- a/src/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/src/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -5,23 +5,24 @@
     <OutputType>Library</OutputType>
     <LangVersion>default</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <VersionPrefix>0.9</VersionPrefix>
     <Title>ChartJs.Blazor</Title>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
     <Company>Marius Muntean</Company>
     <Authors>Marius Muntean</Authors>
-    <Description>CharJs charts for Blazor.</Description>
+    <Description>ChartJs charts for Blazor.
+Compatible with client-side and server-side Blazor applications.</Description>
     <RepositoryUrl>https://github.com/mariusmuntean/ChartJs.Blazor</RepositoryUrl>
     <PackageProjectUrl>https://github.com/mariusmuntean/ChartJs.Blazor</PackageProjectUrl>
-    <PackageTags>ChartJS Blazor ASP.Net Core</PackageTags>
+    <PackageTags>ChartJS Blazor ASP.Net Core wasm</PackageTags>
     <PackageSummary></PackageSummary>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageReleaseNotes>Refactored a lot of code.
+Updated to the latest Blazor.</PackageReleaseNotes>
     <AssemblyName>ChartJs.Blazor</AssemblyName>
     <RootNamespace>ChartJs.Blazor</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.9.5</Version>
-    <AssemblyVersion>0.9.5.0</AssemblyVersion>
-    <FileVersion>0.9.5.0</FileVersion>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage />
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
