--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
@@ -7,8 +7,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0-preview1.19508.20" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0-preview1.19508.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
 
 
