--- a/src/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/src/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -5,6 +5,7 @@
     <OutputType>Library</OutputType>
     <LangVersion>default</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <TypeScriptToolsVersion>3.2</TypeScriptToolsVersion>
     <Title>ChartJs.Blazor</Title>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
     <Company>Marius Muntean</Company>
@@ -40,6 +41,9 @@ Updated to the latest Blazor.</PackageReleaseNotes>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.7.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
-  
 </Project>
