--- a/src/ChartJs.Blazor/wwwroot/tsconfig.json
+++ b/src/ChartJs.Blazor/wwwroot/tsconfig.json
@@ -1,9 +1,15 @@
 ﻿{
-  "include": ["*.ts"],
   "compilerOptions": {
     "allowJs": true,
     "module": "none",
-    "target": "es2019",
-    "lib": ["dom", "es2019"]
-  }
+    "target": "es2018",
+    "lib": [ "dom", "es2018" ],
+    "outDir": "",
+    "sourceMap": true,
+    "sourceRoot": "ts/"
+  },
+  "include": [
+    "ts/*.ts"
+  ],
+  "compileOnSave": true
 }
