given some types to DoNet - read here https://www.typescriptlang.org/docs/handbook/declaration-files/by-example.html

--- a/src/ChartJs.Blazor/wwwroot/tsconfig.json
+++ b/src/ChartJs.Blazor/wwwroot/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": [ "dom", "es2018" ],
     "outDir": "",
     "sourceMap": true,
-    "sourceRoot": "ts/"
+    "sourceRoot": "ts/",
+    "typeRoots": ["ts/types/"]
   },
   "include": [
     "ts/*.ts"
