Added a new sample that shows .Net click handlers

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Components\Legend\" />
-    <Folder Include="Extensions\" />
+    <Folder Include="Services" />
   </ItemGroup>
 
 </Project>
