Split up the Typescript files into logical units. Their output is still combined into a single javascript file

--- a/src/ChartJs.Blazor/wwwroot/tsconfig.json
+++ b/src/ChartJs.Blazor/wwwroot/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es2018",
     "lib": [ "dom", "es2018" ],
     "outDir": "",
+    "outFile": "ChartJsBlazorInterop.js",
     "sourceMap": true,
     "sourceRoot": "ts/",
     "typeRoots": ["ts/types/"]
